[gd_scene load_steps=4 format=2]

[ext_resource path="res://debris/mediumDebrisManager.gd" type="Script" id=1]
[ext_resource path="res://debris/mediumDebris.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 368, 0, 0, 0, 0, 0, 368, 0, 0, 0, 0, 0, 0 )
}

[node name="mediumDebrisManager" type="Node2D"]
script = ExtResource( 1 )
debrisScene = ExtResource( 2 )

[node name="debrisPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="debrisSpawnLocation" type="PathFollow2D" parent="debrisPath"]

[node name="debrisSpawnTimer" type="Timer" parent="."]
wait_time = 1.8

[connection signal="timeout" from="debrisSpawnTimer" to="." method="_on_debrisSpawnTimer_timeout"]
